fixed destop hor scrollbar

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
 
 .pc-snap {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   max-width: calc(100vh * 1.8);
   scroll-snap-align: start;
   display: flex;
@@ -21,6 +21,8 @@ body {
   margin: 0;
   font-family: 'Noto Sans', 'Helvetica', sans-serif;
   color: #191918;
+  max-width: 100vw;
+  overflow-x: clip;
 }
 
 img[alt] {
