--- a/style2.css
+++ b/style2.css
@@ -1,7 +1,7 @@
 /* MAIN PAGE */
 .pc-snap {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   max-width: calc(100vh * 1.8);
   scroll-snap-align: start;
   display: flex;
@@ -17,6 +17,8 @@ body {
   margin: 0;
   font-family: 'Noto Sans', 'Helvetica', sans-serif;
   color: #191918;
+  max-width: 100vw;
+  overflow-x: clip;
 }
 
 img[alt] {
